Fix: rendering of wide code blocks on small devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@ code {
 	@apply bg-gray-200 px-2 py-0.5;
 }
 pre {
-	@apply p-4 rounded-md;
+	@apply p-4 rounded-md break-all;
 }
 pre > code {
 	all: unset;
